CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(HectorSlam)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
ADD_SUBDIRECTORY(src)

ADD_EXECUTABLE(hectorslam main.cpp)

TARGET_LINK_LIBRARIES(hectorslam HectorFunctions)

FIND_PACKAGE(OpenCV REQUIRED)
TARGET_LINK_LIBRARIES(hectorslam ${OpenCV_LIBS})

FIND_PACKAGE(Boost REQUIRED COMPONENTS system thread)
TARGET_LINK_LIBRARIES(hectorslam ${Boost_LIBRARIES})
